# imu-fft

./: .gitignore  README.md  REBUILD_PLAN.md  agent.md  index.html  memory.md  package-lock.json  package.json
.github/workflows/: release.yml
public/: Buffer.3MF  Buffer.glb  Buffer_threads.glb  README.md
scripts/: bump-version.mjs
src/: lucide.d.ts  main.ts  model.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dsp.rs  main.rs  stream.rs
